package cz.fi.muni.pa165.enums;

/**
 * Enum representing various player characteristic types.
 */
public enum PlayerCharacteristicType {

	// General Attributes
	SPEED, STAMINA, STRENGTH,

	// Offensive Attributes
	SHOOTING, PASSING, PUCK_CONTROL,

	// Defensive Attributes
	DEFENSE, CHECKING,

	// Goalie Attributes
	GOALIE_SKILL,

	// Mental & Team Play
	AGGRESSION

}
